--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,14 @@ li:hover span.delete-item {
 .error {
   color: red;
 }
+
+
+.Footer a {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+
+.Footer a.active {
+  font-weight: bold;
+}
